--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login // Register</title>
-    <link rel="stylesheet" href="{%static 'css/register.css'%}">
+    <link rel="stylesheet" type="text/css" href="{%static 'css/register.css'%}">
 </head>
 <body>
     <div class="containter-main">
