--- a/templates/driver_dashboard.html
+++ b/templates/driver_dashboard.html
@@ -40,7 +40,7 @@
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
       </div>
-      <div class="card float-end" style="width: 50rem;">
+      <div class="card float-end" style="width: auto;">
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Name : User Sample</li>
           <li class="list-group-item">Phone number : 999999999</li>
