--- a/templates/driver_dashboard.html
+++ b/templates/driver_dashboard.html
@@ -29,6 +29,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/go/generate">Generate QR</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">logout</a>
+              </li>
             </ul>
           </div>
         </div>
